# src/users/controllers/CreateLoginController.ts
@@ -1,6 +1,6 @@
+import { refreshTokenCookie } from '@/shared/helpers/cookie/RefreshTokenCookie'
 import { Request, Response } from 'express'
 import { container } from 'tsyringe'
-import { userViewModel } from '../http/view-models/UserViewModel'
 import { CreateLoginUseCase } from '../use-cases/CreateLoginUseCase'
 import { IUsersController } from './IUsersController'
 
@@ -13,8 +13,8 @@ export class CreateLoginController implements IUsersController {
 
   async handler(req: Request, res: Response): Promise<Response> {
     const { email, password } = req.body
-    const { user, accessToken, refreshToken } = await this.createLoginUseCase.execute({ email, password })
-    const profileDTO = userViewModel.toHttp(user)
-    return res.status(201).json({ user: profileDTO, accessToken, refreshToken })
+    const { accessToken, refreshToken } = await this.createLoginUseCase.execute({ email, password })
+    refreshTokenCookie.set(res, refreshToken)
+    return res.status(201).json({ accessToken })
   }
 }
